Fix : 채팅방 목록 조회